Fixa scrollbar verticale

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 header{
-    /* height: 70px; */
+    max-height: 70px;
     background-color: #f8f9fa;
 }
 
